--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_compile_options(-Wall -Wextra -Werror)
 
 add_executable(day01 day01/main.cpp utils/utils.h)
 add_executable(day02 day02/main.cpp utils/utils.h)
+add_executable(day03 day03/main.cpp utils/utils.h)
