--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(day02 day02/main.cpp utils/utils.h)
 add_executable(day03 day03/main.cpp utils/utils.h)
 add_executable(day04 day04/main.cpp utils/utils.h)
 add_executable(day05 day05/main.cpp day05/intcode.h utils/utils.h)
+add_executable(day06 day06/main.cpp utils/utils.h)
