--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(day03 day03/main.cpp utils/utils.h)
 add_executable(day04 day04/main.cpp utils/utils.h)
 add_executable(day05 day05/main.cpp day05/intcode.h utils/utils.h)
 add_executable(day06 day06/main.cpp utils/utils.h)
+add_executable(day07 day07/main.cpp day07/intcode.h utils/utils.h)
