--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(day05 day05/main.cpp day05/intcode.h utils/utils.h)
 add_executable(day06 day06/main.cpp utils/utils.h)
 add_executable(day07 day07/main.cpp day07/intcode.h utils/utils.h)
 add_executable(day08 day08/main.cpp utils/utils.h)
+add_executable(day09 day09/main.cpp day09/intcode.h utils/utils.h)
