--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(day07 day07/main.cpp day07/intcode.h utils/utils.h)
 add_executable(day08 day08/main.cpp utils/utils.h)
 add_executable(day09 day09/main.cpp day09/intcode.h utils/utils.h)
 add_executable(day10 day10/main.cpp utils/utils.h)
+add_executable(day11 day11/main.cpp day09/intcode.h utils/utils.h)
