--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(day08 day08/main.cpp utils/utils.h)
 add_executable(day09 day09/main.cpp day09/intcode.h utils/utils.h)
 add_executable(day10 day10/main.cpp utils/utils.h)
 add_executable(day11 day11/main.cpp day09/intcode.h utils/utils.h)
+add_executable(day12 day12/main.cpp utils/utils.h)
