--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(day09 day09/main.cpp day09/intcode.h utils/utils.h)
 add_executable(day10 day10/main.cpp utils/utils.h)
 add_executable(day11 day11/main.cpp day09/intcode.h utils/utils.h)
 add_executable(day12 day12/main.cpp utils/utils.h)
+add_executable(day13 day13/main.cpp utils/utils.h day09/intcode.h)
