--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(day11 day11/main.cpp day09/intcode.h utils/utils.h)
 add_executable(day12 day12/main.cpp utils/utils.h)
 add_executable(day13 day13/main.cpp utils/utils.h day09/intcode.h)
 add_executable(day14 day14/main.cpp utils/utils.h)
+add_executable(day15 day15/main.cpp utils/utils.h day09/intcode.h)
