--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(day15 day15/main.cpp utils/utils.h day09/intcode.h)
 add_executable(day16 day16/main.cpp utils/utils.h easyTimer.h)
 add_executable(day17 day17/main.cpp utils/utils.h day09/intcode.h)
 add_executable(day18 day18/main.cpp utils/utils.h easyTimer.h)
+add_executable(day18p2 day18/main_pt2.cpp utils/utils.h easyTimer.h)
 
 find_package(OpenMP REQUIRED)
 target_link_libraries(day16 PRIVATE OpenMP::OpenMP_CXX)
